--- a/src/Scss/_reset.scss
+++ b/src/Scss/_reset.scss
@@ -45,9 +45,9 @@
     font-weight: inherit;
   }
   
-  // ul, ul li {
-  //   list-style: none;
-  // }
+  ul, ul li {
+    list-style: none;
+  }
   
   img {
     vertical-align: top;
